update footnotes padding to prevent margin bleed

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -284,7 +284,7 @@ ul {
 			}
 
 			ol {
-				padding-left: 1rem;
+				padding-left: var(--space-s);
 
 				> * {
 					margin-block: 0;
